--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             Check out my site...hotness
         </h1>
         <p>It's so awesome, if there was an awesome fueled car, it would be Exxon</p>
+        <img src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/0000/1597/brand.gif?itok=lbArTQo9" alt="Exxon logo">
     </body>
 </html>
