--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>
             Check out my site...hotness
         </h1>
-        <p>It's so awesome, if there was an awesome fueled car, it would be Exxon</p>
+        <p>It's so awesome, if there was an awesome fueled car, it would be...</p>
         <img src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/0000/1597/brand.gif?itok=lbArTQo9" alt="Exxon logo">
     </body>
 </html>
